--- a/src/public/index.html
+++ b/src/public/index.html
@@ -84,6 +84,32 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#" id="timetable-link">
+                  <i class="fas fa-clock me-2"></i>
+                  TimeTable
+                </a>
+                <ul class="nav flex-column ms-3 d-none" id="timetable-submenu">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" id="master-slot-link">
+                      <i class="fas fa-table me-2"></i>
+                      Master Slot TimeTable
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" id="create-slot-link">
+                      <i class="fas fa-plus me-2"></i>
+                      Create
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" id="view-slot-link">
+                      <i class="fas fa-eye me-2"></i>
+                      View
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#" id="logout-link">
                   <i class="fas fa-sign-out-alt me-2"></i>
                   Logout
@@ -632,6 +658,190 @@
                     </tr>
                   </tbody>
                 </table>
+              </div>
+            </div>
+
+            <!-- TimeTable Pages -->
+            <div id="timetable-page" class="content-page">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                      <h6 class="m-0 font-weight-bold text-primary">
+                        TimeTable Management
+                      </h6>
+                    </div>
+                    <div class="card-body">
+                      <p>
+                        Welcome to the TimeTable Management section. Please
+                        select an option from the sidebar:
+                      </p>
+                      <ul>
+                        <li>
+                          <strong>Create</strong> - Create and manage slot
+                          configurations
+                        </li>
+                        <li>
+                          <strong>View</strong> - View the master slot timetable
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Slot Create Page -->
+            <div id="create-slot-page" class="content-page">
+              <div class="d-flex justify-content-between mb-4">
+                <button type="button" class="btn btn-primary" id="add-slot-btn">
+                  <i class="fas fa-plus"></i> Add New Slot
+                </button>
+                <div class="d-flex">
+                  <input
+                    type="text"
+                    class="form-control me-2"
+                    id="slot-search-input"
+                    placeholder="Search slots..."
+                  />
+                  <select class="form-select me-2" id="slot-year-filter">
+                    <option value="all">All Years</option>
+                    <!-- Will be populated dynamically -->
+                  </select>
+                  <select class="form-select me-2" id="slot-semester-filter">
+                    <option value="all">All Semesters</option>
+                    <option value="FALL">Fall</option>
+                    <option value="WINTER">Winter</option>
+                    <option value="SUMMER">Summer</option>
+                  </select>
+                  <select class="form-select" id="slot-status-filter">
+                    <option value="all">All Status</option>
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>Year</th>
+                      <th>Semester</th>
+                      <th>Day</th>
+                      <th>Slot Name</th>
+                      <th>Time</th>
+                      <th>Status</th>
+                      <th>Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="slots-table">
+                    <tr>
+                      <td colspan="7" class="text-center">Loading slots...</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <!-- View Slot Page -->
+            <div id="view-slot-page" class="content-page">
+              <div class="card shadow mb-4">
+                <div class="card-header py-3">
+                  <h6 class="m-0 font-weight-bold text-primary">
+                    View Master Slot TimeTable
+                  </h6>
+                </div>
+                <div class="card-body">
+                  <div class="row mb-4">
+                    <div class="col-md-6">
+                      <div class="form-group mb-3">
+                        <label for="view-slot-year" class="form-label"
+                          >Academic Year</label
+                        >
+                        <select class="form-select" id="view-slot-year">
+                          <option value="">Select Academic Year</option>
+                          <!-- Will be populated dynamically -->
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group mb-3">
+                        <label for="view-slot-semester" class="form-label"
+                          >Semester Type</label
+                        >
+                        <select class="form-select" id="view-slot-semester">
+                          <option value="">Select Semester</option>
+                          <option value="FALL">Fall</option>
+                          <option value="WINTER">Winter</option>
+                          <option value="SUMMER">Summer</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12 text-center">
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        id="view-timetable-btn"
+                      >
+                        View TimeTable
+                      </button>
+                    </div>
+                  </div>
+
+                  <div
+                    class="mt-4"
+                    id="timetable-container"
+                    style="display: none"
+                  >
+                    <h5 class="text-center mb-3" id="timetable-title"></h5>
+                    <h6 class="text-center mb-4">Slot timetable</h6>
+
+                    <div class="table-responsive">
+                      <table
+                        class="table table-bordered"
+                        id="master-slot-table"
+                      >
+                        <thead>
+                          <tr class="table-primary">
+                            <th></th>
+                            <th colspan="4">Morning</th>
+                            <th rowspan="2" class="align-middle">Lunch</th>
+                            <th colspan="4">Afternoon</th>
+                          </tr>
+                          <tr class="table-primary">
+                            <th>Day</th>
+                            <th>9:00 - 9:50</th>
+                            <th>9:55 - 10:45</th>
+                            <th>10:50 - 11:40</th>
+                            <th>11:45 - 12:35</th>
+                            <th>1:15 - 2:05</th>
+                            <th>2:10 - 3:00</th>
+                            <th>3:05 - 3:55</th>
+                            <th>4:00 - 4:50</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <!-- Will be populated dynamically -->
+                        </tbody>
+                      </table>
+                    </div>
+
+                    <div class="mt-4">
+                      <h6>Slot Information:</h6>
+                      <textarea
+                        class="form-control"
+                        id="slot-info-textarea"
+                        rows="6"
+                      >
+..
+          </textarea
+                      >
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -2213,6 +2423,168 @@
       </div>
     </div>
 
+    <!-- Slot Modal -->
+    <div
+      class="modal fade"
+      id="slotModal"
+      tabindex="-1"
+      aria-labelledby="slotModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="slotModalLabel">Add New Slot</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="slot-form">
+              <input type="hidden" id="slot-id-field" />
+              <div class="mb-3">
+                <label for="slot-year-field" class="form-label"
+                  >Academic Year *</label
+                >
+                <select class="form-select" id="slot-year-field" required>
+                  <option value="">Select academic year</option>
+                  <option value="2023-24">2023-24</option>
+                  <option value="2024-25">2024-25</option>
+                  <option value="2025-26">2025-26</option>
+                  <option value="2026-27">2026-27</option>
+                  <option value="2027-28">2027-28</option>
+                  <option value="2028-29">2028-29</option>
+                  <option value="2029-30">2029-30</option>
+                </select>
+                <div class="form-text">The academic year for this slot.</div>
+              </div>
+              <div class="mb-3">
+                <label for="slot-semester-field" class="form-label"
+                  >Semester Type *</label
+                >
+                <select class="form-select" id="slot-semester-field" required>
+                  <option value="">Select semester type</option>
+                  <option value="FALL">Fall</option>
+                  <option value="WINTER">Winter</option>
+                  <option value="SUMMER">Summer</option>
+                </select>
+                <div class="form-text">The semester type for this slot.</div>
+              </div>
+              <div class="mb-3">
+                <label for="slot-day-field" class="form-label">Day *</label>
+                <select class="form-select" id="slot-day-field" required>
+                  <option value="">Select day</option>
+                  <option value="MON">Monday</option>
+                  <option value="TUE">Tuesday</option>
+                  <option value="WED">Wednesday</option>
+                  <option value="THU">Thursday</option>
+                  <option value="FRI">Friday</option>
+                </select>
+                <div class="form-text">The day of the week for this slot.</div>
+              </div>
+              <div class="mb-3">
+                <label for="slot-name-field" class="form-label"
+                  >Slot Name *</label
+                >
+                <select class="form-select" id="slot-name-field" required>
+                  <option value="">Select slot name</option>
+                  <!-- Will be populated dynamically -->
+                </select>
+                <div class="form-text">The name/code for this slot.</div>
+              </div>
+              <div class="mb-3">
+                <label for="slot-time-field" class="form-label"
+                  >Slot Time *</label
+                >
+                <select class="form-select" id="slot-time-field" required>
+                  <option value="">Select slot time</option>
+                  <!-- Will be populated dynamically -->
+                </select>
+                <div class="form-text">The time for this slot.</div>
+              </div>
+              <div class="form-check mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="slot-is-active-field"
+                  checked
+                />
+                <label class="form-check-label" for="slot-is-active-field">
+                  Active
+                </label>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" id="save-slot-btn">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Slot Delete Confirmation Modal -->
+    <div
+      class="modal fade"
+      id="slotDeleteModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Delete Slot</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Are you sure you want to delete this slot? This action cannot be
+              undone.
+            </p>
+            <p><strong>Year:</strong> <span id="slot-delete-year"></span></p>
+            <p>
+              <strong>Semester:</strong> <span id="slot-delete-semester"></span>
+            </p>
+            <p><strong>Day:</strong> <span id="slot-delete-day"></span></p>
+            <p><strong>Name:</strong> <span id="slot-delete-name"></span></p>
+            <p><strong>Time:</strong> <span id="slot-delete-time"></span></p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="confirm-slot-delete-btn"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -2239,5 +2611,6 @@
     <script src="js/faculty.js"></script>
     <script src="js/courses.js"></script>
     <script src="js/students.js"></script>
+    <script src="js/slots.js"></script>
   </body>
 </html>
