--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,6 +15,65 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- STUDENT INTERFACE CSS - DIRECT EMBED -->
+    <style>
+      /* Student interface container */
+      body.authenticated.student-user #student-interface {
+        position: relative !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100% !important;
+        height: 100vh !important;
+        background-color: #f8f9fa !important;
+        display: block !important;
+        visibility: visible !important;
+        z-index: 1 !important;
+      }
+
+      /* Container inside student interface */
+      body.authenticated.student-user #student-interface .container-fluid {
+        display: block !important;
+        visibility: visible !important;
+        width: 100% !important;
+        height: 100vh !important;
+      }
+
+      /* Student sidebar */
+      body.authenticated.student-user #student-interface .sidebar {
+        display: block !important;
+        visibility: visible !important;
+        background-color: #212529 !important;
+        color: white !important;
+        width: 250px !important;
+        height: 100vh !important;
+        position: fixed !important;
+        top: 0 !important;
+        left: 0 !important;
+        z-index: 100 !important;
+      }
+
+      /* Student main content */
+      body.authenticated.student-user #student-interface main {
+        display: block !important;
+        visibility: visible !important;
+        background-color: #f8f9fa !important;
+        color: black !important;
+        margin-left: 250px !important;
+        padding: 20px !important;
+        min-height: 100vh !important;
+      }
+
+      /* Student navigation links */
+      body.authenticated.student-user #student-interface .nav-link {
+        color: white !important;
+        display: block !important;
+      }
+
+      /* Hide admin interface when student is logged in */
+      body.authenticated.student-user .container-fluid:first-of-type {
+        display: none !important;
+      }
+    </style>
   </head>
   <body>
     <div class="container-fluid">
@@ -1329,6 +1388,122 @@
       </div>
     </div>
 
+    <!-- Student Interface (Hidden by default) -->
+    <div id="student-interface" class="d-none">
+      <div class="container-fluid">
+        <div class="row">
+          <!-- Student Sidebar (Empty for now) -->
+          <nav
+            id="student-sidebar"
+            class="col-md-3 col-lg-2 d-md-block bg-dark sidebar"
+          >
+            <div class="position-sticky sidebar-sticky">
+              <div class="text-center p-3">
+                <h3 class="text-white">Student Portal</h3>
+              </div>
+              <ul class="nav flex-column">
+                <!-- Dashboard link -->
+                <li class="nav-item">
+                  <a
+                    class="nav-link active text-white"
+                    href="#"
+                    id="student-dashboard-link"
+                  >
+                    <i class="fas fa-tachometer-alt me-2"></i>
+                    Dashboard
+                  </a>
+                </li>
+                <!-- Change Password option -->
+                <li class="nav-item">
+                  <a
+                    class="nav-link text-white"
+                    href="#"
+                    id="student-change-password-link"
+                  >
+                    <i class="fas fa-key me-2"></i>
+                    Change Password
+                  </a>
+                </li>
+                <!-- Placeholder for future features -->
+                <li class="nav-item">
+                  <a class="nav-link text-muted" href="#">
+                    <i class="fas fa-info-circle me-2"></i>
+                    More features coming soon...
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+
+          <!-- Student Main Content -->
+          <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <!-- Student Header -->
+            <div
+              class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+            >
+              <h1 id="student-page-title">Student Dashboard</h1>
+              <div class="student-info">
+                <div class="row text-end">
+                  <div class="col-12">
+                    <strong>Enrollment #:</strong>
+                    <span id="student-enrollment-no">-</span>
+                  </div>
+                  <div class="col-12">
+                    <strong>Name:</strong> <span id="student-name">-</span>
+                  </div>
+                  <div class="col-12">
+                    <strong>School:</strong> <span id="student-school">-</span>
+                  </div>
+                  <div class="col-12">
+                    <strong>Program:</strong>
+                    <span id="student-program">-</span>
+                  </div>
+                  <div class="col-12">
+                    <strong>Year Admitted:</strong>
+                    <span id="student-year">-</span>
+                  </div>
+                  <div class="col-12 mt-2">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-secondary"
+                      id="student-logout-btn"
+                    >
+                      <i class="fas fa-sign-out-alt me-1"></i> Logout
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Student Alert Messages -->
+            <div id="student-alert-container"></div>
+
+            <!-- Student Content -->
+            <div id="student-content-container">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                      <h6 class="m-0 font-weight-bold text-primary">
+                        Welcome to Student Portal
+                      </h6>
+                    </div>
+                    <div class="card-body">
+                      <p>
+                        Welcome to the Student Centric Flexible Curriculum
+                        (SCFC) portal.
+                      </p>
+                      <p>More features will be available here soon.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </main>
+        </div>
+      </div>
+    </div>
+
     <!-- School Modal -->
     <div
       class="modal fade"
@@ -1627,6 +1802,19 @@
                 />
               </div>
             </form>
+            <!-- Help Desk Contact Information -->
+            <!-- <div class="alert alert-info mt-3">
+              <small>
+                <strong>Need Help?</strong><br />
+                • <strong>Students:</strong> Default password is
+                <code>Student@YourEnrollmentNumber</code>
+                <br />
+                • <strong>Forgot Password:</strong> Contact IT Help Desk <br />
+                • <strong>Email:</strong>
+                <a href="mailto:help@amity.edu">help@amity.edu</a><br />
+                • <strong>Phone:</strong> 1234567899
+              </small>
+            </div> -->
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" id="login-btn">
@@ -3399,6 +3587,159 @@
       </div>
     </div>
 
+    <!-- Student Password Change Modal -->
+    <div
+      class="modal fade"
+      id="studentPasswordResetModal"
+      tabindex="-1"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Change Password</h5>
+          </div>
+          <div class="modal-body">
+            <div id="student-reset-alert" class="alert alert-info" role="alert">
+              You must change your password before accessing the system.
+            </div>
+            <form id="student-password-reset-form">
+              <div class="mb-3">
+                <label for="student-new-password-field" class="form-label"
+                  >New Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="student-new-password-field"
+                  required
+                />
+                <div class="form-text">
+                  Password must be at least 8 characters with uppercase,
+                  lowercase, number, and special character. Cannot be the same
+                  as your default password.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="student-confirm-password-field" class="form-label"
+                  >Confirm New Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="student-confirm-password-field"
+                  required
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              id="student-cancel-reset-btn"
+            >
+              Cancel & Login Again
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              id="student-reset-password-btn"
+            >
+              Change Password
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Student Voluntary Password Change Modal -->
+    <div
+      class="modal fade"
+      id="studentVoluntaryPasswordModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Change Password</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div
+              id="voluntary-password-alert"
+              class="alert d-none"
+              role="alert"
+            ></div>
+            <form id="voluntary-password-form">
+              <div class="mb-3">
+                <label for="voluntary-current-password-field" class="form-label"
+                  >Current Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="voluntary-current-password-field"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="voluntary-new-password-field" class="form-label"
+                  >New Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="voluntary-new-password-field"
+                  required
+                />
+                <div class="form-text">
+                  Password must be at least 8 characters with uppercase,
+                  lowercase, number, and special character. Cannot be the same
+                  as your default password.
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="voluntary-confirm-password-field" class="form-label"
+                  >Confirm New Password *</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="voluntary-confirm-password-field"
+                  required
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              id="voluntary-change-password-btn"
+            >
+              Change Password
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap & jQuery JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -3418,6 +3759,7 @@
     </script>
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/student-auth.js"></script>
     <script src="js/schools.js"></script>
     <script src="js/semesters.js"></script>
     <script src="js/programs.js"></script>
