--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SCFC ERP - Admin Dashboard</title>
+    <title>SCFC ERP - AUB</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -77,6 +77,14 @@
   </head>
   <body>
     <div class="container-fluid">
+      <!-- AUB Banner -->
+      <div class="aub-banner-container">
+        <img
+          src="images/aub-banner.png"
+          alt="Amity University Bengaluru"
+          class="aub-banner"
+        />
+      </div>
       <div class="row">
         <!-- Sidebar Navigation -->
         <nav
@@ -1495,6 +1503,14 @@
     <!-- Student Interface (Hidden by default) -->
     <div id="student-interface" class="d-none">
       <div class="container-fluid p-0">
+        <!-- AUB Banner for Students -->
+        <div class="aub-banner-container">
+          <img
+            src="images/aub-banner.png"
+            alt="Amity University Bengaluru"
+            class="aub-banner"
+          />
+        </div>
         <div class="row g-0">
           <!-- Student Sidebar -->
           <div class="col-md-3 col-lg-2">
@@ -2159,8 +2175,16 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
+          <!-- AUB Banner in Login -->
+          <div class="aub-banner-container">
+            <img
+              src="images/aub-banner.png"
+              alt="Amity University Bengaluru"
+              class="aub-banner"
+            />
+          </div>
           <div class="modal-header">
-            <h5 class="modal-title">Login to SCFC ERP</h5>
+            <h5 class="modal-title">SCFC ERP - Amity University, Bengaluru</h5>
           </div>
           <div class="modal-body">
             <div
