--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1581,6 +1581,17 @@
                       More features coming soon...
                     </a>
                   </li>
+                  <!-- Student Logout -->
+                  <li class="nav-item">
+                    <a
+                      class="nav-link text-white"
+                      href="#"
+                      id="student-logout-btn"
+                    >
+                      <i class="fas fa-sign-out-alt me-2"></i>
+                      Logout
+                    </a>
+                  </li>
                 </ul>
               </div>
             </nav>
@@ -1614,15 +1625,6 @@
                     <div class="col-12">
                       <strong>Year Admitted:</strong>
                       <span id="student-year">-</span>
-                    </div>
-                    <div class="col-12 mt-2">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                        id="student-logout-btn"
-                      >
-                        <i class="fas fa-sign-out-alt me-1"></i> Logout
-                      </button>
                     </div>
                   </div>
                 </div>
